--- a/public/styles/_adminregister.scss
+++ b/public/styles/_adminregister.scss
@@ -1,12 +1,11 @@
 .adminregister {
   width: 40%;
   padding: 20px;
-  margin: 40px auto;
+  margin: 30px auto;
   border-radius: 10px;
-  background-color: rgb(224, 215, 215);
+  background-color: #fff;
 
   fieldset {
-    padding: 10px 15px;
     margin: 5px 0;
   }
 
@@ -17,8 +16,18 @@
     width: 100%;
     padding: 10px;
     margin: 0 5px;
-    background-color: rgba(249, 238, 238, 0.8);
     border: none;
+    background-color: #f7f7f7;
+    border: none;
+    border-radius: 5px;
+    &:hover {
+      border: none;
+      outline: none;
+    }
+    &:focus {
+      border: none;
+      outline: none;
+    }
   }
   .submit {
     width: 25%;
