--- a/views/admin/adminregister.ejs
+++ b/views/admin/adminregister.ejs
@@ -1,4 +1,5 @@
-<%- include("../partials/header") -%> <%- include("./previous.ejs") -%>
+<%- include("../partials/header") -%> <%- include("./previous.ejs") -%> <%-
+include("../alert.ejs") -%>
 <div class="adminregister">
   <div class="adminheader">
     <h2>Create An Account</h2>
@@ -29,4 +30,4 @@
     <button class="submit" type="submit">Register</button>
   </form>
 </div>
-<%- include("../partials/footer") -%>
+<%- include("../clear.ejs") -%> <%- include("../partials/footer") -%>
