--- a/views/admin/editbook.ejs
+++ b/views/admin/editbook.ejs
@@ -1,4 +1,5 @@
-<%- include("../partials/header.ejs") -%> <%- include("./bookspage.ejs") -%>
+<%- include("../partials/header.ejs") -%> <%- include("./bookspage.ejs") -%> <%-
+include("../alert.ejs") -%>
 <div class="updatebookdata">
   <div class="book-header">
     <h2>Update Book Details</h2>
@@ -33,4 +34,4 @@
     <button class="addbutton" type="submit">Update Book</button>
   </form>
 </div>
-<%- include("../partials/footer.ejs") -%>
+<%- include("../clear.ejs") -%> <%- include("../partials/footer.ejs") -%>
