--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -14,8 +14,7 @@
     <div class="num"><%= profile.mobile %></div>
   </div>
   <div class="edit-profile">
-    <a href="/user/editprofile">Edit Profile</a>
-    <a href="/user/editpassword">Change Password</a>
+    <a href="/admin/editpassword">Change Password</a>
   </div>
 </div>
 <%- include("../partials/footer.ejs") -%>
