--- a/views/user/userlogin.ejs
+++ b/views/user/userlogin.ejs
@@ -1,5 +1,6 @@
 <%- include("../partials/header") -%>
 <%- include("../homenav.ejs") -%>
+<%- include("../alert.ejs") -%>
 <div class="adminlogin">
   <div class="user-header">
     <h2>User Login</h2>
@@ -21,5 +22,5 @@
     <a href="/admin/login">Admin Login</a>
   </div>
 </div>
-
+<%- include("../clear.ejs") -%>
 <%- include("../partials/footer") -%>
