--- a/public/styles/Home.scss
+++ b/public/styles/Home.scss
@@ -61,3 +61,5 @@ body {
 @import "./bookdetails";
 @import "./userprofile";
 @import "./userdetails";
+@import "./editpassword";
+@import "./alertmessage";
