--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -1,5 +1,6 @@
 <%- include("../partials/header") -%>
 <%- include("../homenav.ejs") -%>
+<%- include("../alert.ejs") -%>
 <div class="adminlogin">
   <div class="user-header">
     <h2>Admin Login</h2>
@@ -20,5 +21,5 @@
     <a href="/admin/login">Admin Login</a>
   </div>
 </div>
-
+<%- include("../clear.ejs") -%>
 <%- include("../partials/footer") -%>
