--- a/views/admin/bookdetails.ejs
+++ b/views/admin/bookdetails.ejs
@@ -1,4 +1,5 @@
-<%- include("../partials/header.ejs") -%> <%- include("./previous.ejs") -%>
+<%- include("../partials/header.ejs") -%> <%- include("./previous.ejs") -%> <%-
+include("../alert.ejs") -%>
 <div class="booksdetails">
   <% books.forEach(book => { %>
   <div class="book">
@@ -19,4 +20,4 @@
 <div class="bg">
   <img src="/images/datanot.jpg" alt="Not found" />
 </div>
-<%} %> <%- include("../partials/footer.ejs") -%>
+<%} %> <%- include("../clear.ejs") -%> <%- include("../partials/footer.ejs") -%>
