--- a/views/user/issuebook.ejs
+++ b/views/user/issuebook.ejs
@@ -1,4 +1,5 @@
-<%- include("../partials/header.ejs") -%> <%- include("./previous.ejs") -%>
+<%- include("../partials/header.ejs") -%> <%- include("./previous.ejs") -%> <%-
+include("../alert.ejs") -%>
 <div class="booksdetails">
   <% books.forEach(book => { %>
   <div class="book">
@@ -15,4 +16,4 @@
   </div>
   <% }) %>
 </div>
-<%- include("../partials/footer.ejs") -%>
+<%- include("../clear.ejs") -%> <%- include("../partials/footer.ejs") -%>
