--- a/views/user/userregister.ejs
+++ b/views/user/userregister.ejs
@@ -1,4 +1,5 @@
-<%- include("../partials/header") -%> <%- include("../homenav.ejs") -%>
+<%- include("../partials/header") -%> <%- include("../homenav.ejs") -%> <%-
+include("../alert.ejs") -%>
 <div class="adminregister">
   <div class="adminheader">
     <h2>User Register</h2>
@@ -34,4 +35,4 @@
     <p>Have Already An Account ? <a href="/user/login">Login Here</a></p>
   </form>
 </div>
-<%- include("../partials/footer") -%>
+<%- include("../clear.ejs") -%> <%- include("../partials/footer") -%>
